--- a/KoketSite/app/locale/nl_NL/Mage_Review.csv
+++ b/KoketSite/app/locale/nl_NL/Mage_Review.csv
@@ -1,17 +1,17 @@
-"%d Review(s)","%d review(s)"
-"%s Review(s)","%s review(s)"
+"%d Review(s)","%d beoordeling(en)"
+"%s Review(s)","%s beoordeling(en)"
 "(Posted on %s)","(Geplaatst op %s)"
 "1 star","1  ster"
 "2 stars","2 sterren"
 "3 stars","3 sterren"
 "4 stars","4 sterren"
 "5 stars","5 sterren"
-"Add New Review","Nieuwe review toevoegen"
-"Add Your Review","Je review toevoegen"
+"Add New Review","Nieuwe beoordeling toevoegen"
+"Add Your Review","Je beoordeling toevoegen"
 "Administrator","Admin"
-"All Reviews","Alle reviews"
-"All reviews of customer `%s`","Alle reviews van klant '%s'"
-"Allow guests to write reviews","Reviews  van gasten toestaan"
+"All Reviews","Alle beoordelingen"
+"All reviews of customer `%s`","Alle beoordelingen van klant '%s'"
+"Allow guests to write reviews","Beoordelingen van gasten toestaan"
 "Are you sure you want to do this?","Weet je zeker dat je dit wilt?"
 "Are you sure?","Weet je het zeker?"
 "Average Customer Rating","Gemiddelde klantenwaardering"
@@ -70,7 +70,7 @@
 "Type","Type"
 "Unable to post review. Please, try again later.","Kon beoordeling niet plaatsen. Probeer later opnieuw."
 "Update status","Status updaten"
-"View All Reviews","Alle reviews bekijken"
+"View All Reviews","Alle beoordelingen bekijken"
 "View Details","Details bekijken"
 "Visible In","Zichtbaar in"
 "Websites","Websites"
