show unit in product, checkout, cart, ... htaccess change to avoid cross domain error for ajax sending from http to httpS

--- a/KoketSite/app/design/frontend/shopper/koket/locale/nl_NL/translate.csv
+++ b/KoketSite/app/design/frontend/shopper/koket/locale/nl_NL/translate.csv
@@ -127,3 +127,9 @@
 "Coupon code is not valid.","Sorry, ongeldige couponcode. Controlleer op tijpfouten aub."
 "If there is an account associated with %s you will receive an email with a link to reset your password.","Als wij een account vinden die gekoppeld is aan het email %s zal je zodadelijk een mail ontvangen om je paswoord te resetten."
 "Comment","Je opmerkingen"
+"Minimum order quantity","Minimale bestelhoeveelheid"
+"per stuk(s)","per&nbsp;stuk"
+"per meter","per&nbsp;meter"
+"Not connect. Verify Network.","Geen connectie. Controlleer je netwerk."
+"Please specify payment method","Kies een betaalwijze aub."
+"Please specify shipping method","Kies een verzendwijze aub."
