--- a/KoketSite/app/locale/nl_NL/Mage_Checkout.csv
+++ b/KoketSite/app/locale/nl_NL/Mage_Checkout.csv
@@ -149,7 +149,7 @@
 "Product","Product"
 "Product Name","Productnaam"
 "Product does not exist","Product bestaat niet"
-"Qty","Aantal stuks of meter"
+"Qty","Aantal"
 "Quote Lifetime (days)","Geldigheid offerte (dagen)"
 "Recently added item(s)","Recent toegevoegd"
 "Register","Bewaar mijn gegevens voor een volgende keer"
@@ -213,7 +213,7 @@
 "This condition no longer exists","Deze voorwaarde bestaat niet meer"
 "Total","Totaal"
 "Total for this address","Totaal voor dit adres"
-"Unit Price","Prijs per stuk of meter"
+"Unit Price","Eenheidsprijs"
 "Update Qty &amp; Addresses","Aantallen en adressen bijwerken"
 "Update Shopping Cart","Winkelmandje bijwerken"
 "Update Total","Totaal bijwerken"
