weghalen checkout knop, zodat je steeds via de shopping cart moet gaan om te betalen. Op die manier werkt de reward points module ok. translations, skinning

--- a/KoketSite/app/design/frontend/shopper/koket/locale/nl_NL/translate.csv
+++ b/KoketSite/app/design/frontend/shopper/koket/locale/nl_NL/translate.csv
@@ -61,6 +61,7 @@
 "An error occurred while adding item to wishlist: %s","Er liep iets fout bij het toevoegen aan de verlanglijst: %s"
 "An error occurred while adding item to wishlist.","Er liep iets fout bij het toevoegen aan de verlanglijst."
 "View Cart","Bekijk Mandje"
+"View Cart or Checkout","Bekijk mandje of reken af"
 "Continue to Checkout","Afrekenen"
 "Edit item","Item aanpassen"
 "Remove This Item","Item wissen"
@@ -117,7 +118,7 @@
 "Edit Address","Adres bewerken"
 "Address Book","Adresboek"
 "Maximize my discount with points","Gebruik al mijn kortingspunten."
-"Discount Codes","Kortingcodes"
+"Discount Codes","Cadeaucheque & kortingscode"
 "Enter your coupon code if you have one.","Voer je kortingscode in als je die hebt."
 "Apply Coupon","Kortingscode gebruiken"
 "Apply","Invoeren"
