--- a/KoketSite/app/locale/nl_NL/Mage_Api.csv
+++ b/KoketSite/app/locale/nl_NL/Mage_Api.csv
@@ -330,3 +330,4 @@
 "of %s pages","van %s pagina's"
 "per page","per pagina"
 "to","naar"
+"Please enter a valid full date","Voer een geldige datum in a.u.b."
