--- a/KoketSite/app/locale/nl_NL/Mage_Customer.csv
+++ b/KoketSite/app/locale/nl_NL/Mage_Customer.csv
@@ -34,7 +34,7 @@
 "Bill to Name","Stuur rekening op naam"
 "Billing Information","Betaalgegevens"
 "Bought From","Gekocht van"
-"By creating an account with our store, you will be able to move through the checkout process faster, store multiple shipping addresses, view and track your orders in your account and more.","Wanneer je een account aanmaakt, verloopt het bestelproces sneller en kun je gebruik maken van extra opties zoals het opvolgen van je bestelling, het opslaan van meerdere adressen, enzovoort."
+"By creating an account with our store, you will be able to move through the checkout process faster, store multiple shipping addresses, view and track your orders in your account and more.","Wanneer je een account aanmaakt, verloopt het bestelproces sneller, verzamel je kortingspunten voor je volgende aankoop en kun je gebruik maken van extra opties zoals het opvolgen van je bestelling, het opslaan van meerdere adressen, enzovoort."
 "CSV","CSV"
 "Can't save address","Kan het adres niet opslaan"
 "Can't save customer","Kan klant niet opslaan"
@@ -345,6 +345,10 @@
 "The address does not belong to this customer","Dit adres is niet van deze klant"
 "The address was successfully deleted","Het adres is verwijderd"
 "The address was successfully saved","Het adres is opgeslagen"
+"The last name cannot be empty.","De familienaam mag niet leeg zijn."
+"The minimum password length is %s","De minimale paswoordlengte is %s"
+"The password cannot be empty.","Het paswoord mag niet leeg zijn."
+"The password must have at least 6 characters. Leading or trailing spaces will be ignored.","Het paswoord moet minstens 6 karakters bevatten. Er wordt geen rekening gehouden met spaties vooraan en achteraan."
 "The suffix that goes after name (Jr., Sr., etc.)","De afkorting die achter de naam staat (Jr., Sr., etc.)"
 "The title that goes before name (Mr., Mrs., etc.)","De aanhef die voor de naam staat (heer, mevrouw, etc.)"
 "There are no items in customer's wishlist at the moment","Er staan momenteel geen artikelen op de verlanglijst van de klant"
