--- a/KoketSite/app/locale/nl_NL/Mage_Eav.csv
+++ b/KoketSite/app/locale/nl_NL/Mage_Eav.csv
@@ -47,3 +47,12 @@
 "Wrong attribute set ID","Verkeerd attributenset-ID"
 "Wrong entity ID","Verkeerd entiteit-ID"
 "Yes","Ja"
+"""%s"" invalid type entered.","""%s"" foutief type ingevoerd."
+"""%s"" is a required value.","""%s"" is een verplicht veld."
+"""%s"" is an empty string.","""%s"" is een leeg veld."
+"""%s"" is not a valid URL.","""%s"" is geen geldige URL."
+"""%s"" is not a valid date.","""%s"" is gen geldige datum."
+"""%s"" is not a valid email address.","""%s"" is geen geldig e-mailadres."
+"""%s"" is not a valid file","""%s"" is geen geldig bestand"
+"""%s"" is not a valid file extension.","""%s"" is geen geldige bestandsextensie."
+"""%s"" is not a valid file.","""%s"" is geen geldig bestand."
