--- a/KoketSite/app/locale/nl_NL/Mage_Core.csv
+++ b/KoketSite/app/locale/nl_NL/Mage_Core.csv
@@ -142,11 +142,15 @@
 "Please enter a valid credit card number.","Geef een geldig creditcard-nummer op a.u.b."
 "Please enter a valid date.","Geef een geldige datum op a.u.b."
 "Please enter a valid email address. For example johndoe@domain.com.","Geef een geldig e-mail adres op a.u.b. Bijvoorbeeld: iemand@mail.com ."
-"Please enter a valid number in this field.","Geef een geldig getal op in dit veld."
-"Please enter a valid phone number. For example (123) 456-7890 or 123-456-7890.","Geef een geldig telefoonnummer op. Bijvoorbeeld (123) 456-7889 of 123-456-7890"
+"Please enter a valid day (1-%d).","Voer een geldige dag in a.u.b (1-%d)."
+"Please enter a valid full date","Voer een geldige datum in a.u.b."
+"Please enter a valid full date.","Voer een geldige datum in a.u.b."
+"Please enter a valid month (1-12).","Voer een geldige maand in a.u.b (1-12)."
+"Please enter a valid number in this field.","Voer een geldig getal in a.u.b."
+"Please enter a valid phone number. For example (123) 456-7890 or 123-456-7890.","Voer een geldig telefoonnummer in. Bijvoorbeeld (123) 456-7889 of 123-456-7890"
 "Please enter a valid social security number. For example 123-45-6789.","Geef een geldig burger-service-nummer op a.u.b. Bijvoorbeeld 123-45-6789."
-"Please enter a valid zip code.","Geef een geldige postcode op."
-"Please enter a valid zip code. For example 90602 or 90602-1234.","Voer een geldige postcode in a.u.b. Bijvoorbeeld: 2900 of 6621BK"
+"Please enter a valid zip code.","Voer een geldige postcode in."
+"Please enter a valid zip code. For example 90602 or 90602-1234.","Voer een geldige postcode in a.u.b. Bijvoorbeeld: 2000 of 6621BK"
 "Please enter valid password.","Voer een geldig wachtwoord in a.u.b."
 "Please make sure that Base URL ends with '/' (slash), e.g. http://yourdomain/magento/","De basis-URL moet eindigen met een '/' (slash), bijv. http://uwdomein/magento/"
 "Please make sure your passwords match.","Zorg er voor dat de wachtwoorden overeenkomen"
