placeholder images emails css

--- a/KoketSite/app/design/frontend/shopper/koket/locale/nl_NL/translate.csv
+++ b/KoketSite/app/design/frontend/shopper/koket/locale/nl_NL/translate.csv
@@ -6,8 +6,8 @@
 "BAG","MANDJE"
 "item(s)","product(en)"
 "Navigation","Navigatie"
-"Special Price",""
-"Special Price:",""
+"Special Price","Prijsdaling"
+"Special Price:","Prijsdaling"
 "Regular Price:",""
 "Newsletter","Inschrijven voor de nieuwsbrief"
 "Your email","Je email"
