--- a/KoketSite/app/locale/nl_NL/Mage_Customer.csv
+++ b/KoketSite/app/locale/nl_NL/Mage_Customer.csv
@@ -130,7 +130,7 @@
 "Forgot Email Sender","Afzender e-mail vergeten"
 "Forgot Email Template","Template e-mail vergeten"
 "Forgot Your Password?","Wachtwoord vergeten?"
-"From your My Account Dashboard you have the ability to view a snapshot of your recent account activity and update your account information. Select a link below to view or edit information.","Welkom bij Kokette Katinka. Hieronder kun je je gegevens bekijken en bewerken."
+"From your My Account Dashboard you have the ability to view a snapshot of your recent account activity and update your account information. Select a link below to view or edit information.","Welkom bij Kokette Katinka. Hieronder kun je je account raadplegen en bewerken."
 "General Subscription","Ik wil op de hoogte gehouden worden van aanbiedingen en nieuwigheden."
 "Global","Systeem"
 "Go to Address Book","Ga naar adresboek"
@@ -145,6 +145,8 @@
 "Hello, %s!","Hallo, %s!"
 "ID","ID"
 "IP Address","IP-adres"
+"If you are a registered VAT customer, please click <a href=""%s"">here</a> to enter you billing address for proper VAT calculation","Wanneer je een ondernemersnummer hebt, vragen we je om <a href=""%s"">hier</a> je facturatieadres in te vullen."
+"If you are a registered VAT customer, please click <a href=""%s"">here</a> to enter you shipping address for proper VAT calculation","Wanneer je een ondernemersnummer hebt, vragen we je om <a href=""%s"">hier</a> je verzendadres in te vullen."
 "If you have an account with us, please log in.","Log hier in als je reeds geregistreerd bent."
 "Invalid attribute option specified for attribute %s (%s), skipping the record","Ongeldige attribuut-optie opgegeven voor attribuut %s (%s), record wordt overgeslagen"
 "Invalid attribute set specified, skipping the record","Ongeldige attributenset opgegeven, record wordt overgeslagen"
@@ -316,8 +318,8 @@
 "Show middle name (initial)","Midden-initiaal tonen"
 "Show prefix","Voorvoegsel tonen"
 "Show suffix","Achtervoegsel tonen"
-"Sign Up for Newsletter","Abonneer je op onze nieuwsbrief en ontvang kortingspunten!"
-"Sign up for our newsletter","Abonneer je op onze nieuwsbrief en ontvang kortingspunten!"
+"Sign Up for Newsletter","Abonneer je op onze nieuwsbrief"
+"Sign up for our newsletter","Abonneer je op onze nieuwsbrief"
 "Skip import row, required field ""%s"" not defined","Sla importeren van rij over, benodigd veld “%s” niet opgegeven"
 "Skip import row, website ""%s"" field not exists","Sla importeer-rij over, website ""%s"" veld bestaat niet"
 "State/Province","Provincie"
@@ -341,7 +343,8 @@
 "Telephone","Telefoon"
 "Text","Tekst"
 "Text One Line","Tekst @eacute;@eacute;n regel"
-"Thank you for registering with %s","Bedankt voor het openen van een account bij %s"
+"Thank you for registering with %s","Bedankt voor je registratie bij %s"
+"Thank you for registering with %s.","Bedankt voor je registratie bij %s."
 "The address does not belong to this customer","Dit adres is niet van deze klant"
 "The address was successfully deleted","Het adres is verwijderd"
 "The address was successfully saved","Het adres is opgeslagen"
@@ -403,7 +406,9 @@
 "You have no default shipping address in your address book.","Je hebt geen standaard-afleveradres in je adresboek."
 "You have no primary entries in your address book.","Je hebt geen primaire adressen in je adresboek"
 "You have not set a primary billing address.","Je hebt geen primair factuuradres ingesteld."
-"You have not set a primary shipping address.","Je hebt geen primair afleveradres ingesteld."
+"You have not set a primary shipping address.","Je hebt geen primair verzendadres ingesteld."
+"You have not set a default billing address.","Je hebt nog geen standaard factuuradres ingesteld."
+"You have not set a default shipping address.","Je hebt nog geen standaard verzendadres ingesteld."
 "You have placed no orders yet.","Je plaatste nog geen bestellingen."
 "You have placed no products yet.","Je hebt nog geen producten toegevoegd."
 "You're now Logged Out","Je bent nu uitgelogd"
