csv's, mail templates

--- a/KoketSite/app/design/frontend/shopper/koket/locale/nl_NL/translate.csv
+++ b/KoketSite/app/design/frontend/shopper/koket/locale/nl_NL/translate.csv
@@ -107,13 +107,13 @@
 "You have logged out and will be redirected to our homepage in 5 seconds.","Je bent uitgelogd en wordt binnen 5 seconden doorgestuurd naar onze homepage."
 "What's this?","Waarom?"
 "Earn points for purchasing order","Gewonnen punten door bestelling"
-"Earn points for purchasing order #%s","Gewonnen punten door bestelling #%s"
+"Earn points for purchasing order #%s","Gewonnen punten door bestelling %s"
 "Earn points from shipping fee","Gewonnen punten door gratis verzending"
 "Earn points from tax","Gewonnen punten door BTW"
 "Taken back points for cancelling order","Teruggewonnen punten door geanulleerde bestelling"
-"Taken back points for cancelling order #%s","Teruggewonnen punten door geanulleerde bestelling #%s"
+"Taken back points for cancelling order #%s","Teruggewonnen punten door geanulleerde bestelling %s"
 "Taken back points for refunding order","Teruggewonnen punten door terugbetaling bestelling"
-"Taken back points for refunding order #%s","Teruggewonnen punten door terugbetaling bestelling #%s"
+"Taken back points for refunding order #%s","Teruggewonnen punten door terugbetaling bestelling %s"
 "Change Password","Paswoord veranderen"
 "Edit Address","Adres bewerken"
 "Address Book","Adresboek"
