--- a/KoketSite/app/locale/nl_NL/IWD_Opc.csv
+++ b/KoketSite/app/locale/nl_NL/IWD_Opc.csv
@@ -180,7 +180,7 @@
 "One Page Checkout Success","Een pagina-afrekening gelukt"
 "One item of products do not have identifier or sku","Een item van de producten heeft geen identifier of sku"
 "One item of products is not belong any of quote item","Een item van de producten behoort niet toe tot een van de offerte items"
-"Order #","Bestelling #"
+"Order #","Bestellingnummer"
 "Order Review","Overzicht bestelling"
 "Order Success","Bestelling Succes"
 "Order place error.","Fout bij het plaatsen van bestelling."
@@ -326,7 +326,7 @@
 "You will receive an order confirmation email with details of your order and a link to track its progress.","Je ontvangt een email met de bevestiging van je bestelling."
 "Your Checkout Progress","Je betalingsstatus"
 "Your billing agreement # is: %s.","Je factureringsovereenkomst # is: %s."
-"Your order # is: %s.","Je bestelling # is: %s."
+"Your order # is: %s.","Je bestelnummer is: %s."
 "Your order cannot be completed at this time as there is no payment methods available for it.","Je bestelling kan nu niet worden afgerond omdat er geen betaalmethoden beschikbaar zijn."
 "Your order cannot be completed at this time as there is no shipping methods available for it. Please make necessary changes in your shipping address.","Je bestelling kan nu niet worden afgerond omdat er geen verzendmethoden beschikbaar zijn. Maak de noodzakelijke veranderingen je in afleveradres."
 "Your order has been received.","Je bestelling is goed ontvangen."
