--- a/KoketSite/app/locale/nl_NL/Mage_Adminhtml.csv
+++ b/KoketSite/app/locale/nl_NL/Mage_Adminhtml.csv
@@ -540,8 +540,8 @@
 "Only mapped fields","Alleen aangegeven velden"
 "Optional","Optioneel"
 "Options","Opties"
-"Order #%s","Bestelling #%s"
-"Order #%s (%s)","Bestelling #%s (%s)"
+"Order #%s","Bestelling %s"
+"Order #%s (%s)","Bestelling %s (%s)"
 "Order Totals","Bestelling totalen"
 "Order confirmation email not sent","E-mail met orderbevestiging is niet verzonden"
 "Order confirmation email sent","Bestelbevestiging is gemaild"
@@ -549,6 +549,7 @@
 "Order not longer exist.","Bestelling bestaat niet langer."
 "Orders","Bestellingen"
 "Original Magento attribute names in first row:","Originele Magento attribuut-namen in eerste rij:"
+"Out of stock","Niet in voorraad"
 "PEAR Configuration was successfully saved","PEAR configuratie is met succes opgeslagen"
 "PEAR Console","PEAR Console"
 "PEAR config","PEAR configuratie"
@@ -687,6 +688,7 @@
 "Request Path","Gevraagd Pad"
 "Required","Verplicht"
 "Reset","Herstellen"
+"Reset a Password","Maak nieuw paswoord aan"
 "Reset Filter","Reset filter"
 "Resize","Grootte aanpassen"
 "Resource Access","Toegang tot bron"
@@ -943,6 +945,7 @@
 "You successfully logged out.","U bent met succes uitgelogd."
 "Your Account has been deactivated.","Uw account is gedeactiveerd."
 "Your answers contain duplicates.","Uw antwoord bevat duplicaten."
+"Your password has been updated.","Je paswoord is aangepast."
 "Your server PHP settings allow you to upload files not more than %s at a time. Please modify post_max_size (currently is %s) and upload_max_filesize (currently is %s) values in php.ini if you want to upload larger files.","De PHP-instellingen van uw server staan niet toe om files  te uploaden die groter zijn dan %s. Wijzig de waarden van post_max_size (nu %s) en upload_max_filesize (nu %s) in php.ini als u grotere files wilt uploaden."
 "Zip/Postal Code","Postcode"
 "Zip/Postal Code:","Postcode:"
