--- a/KoketSite/app/locale/nl_NL/Mage_Customer.csv
+++ b/KoketSite/app/locale/nl_NL/Mage_Customer.csv
@@ -145,8 +145,8 @@
 "Hello, %s!","Hallo, %s!"
 "ID","ID"
 "IP Address","IP-adres"
-"If you are a registered VAT customer, please click <a href=""%s"">here</a> to enter you billing address for proper VAT calculation","Wanneer je een ondernemersnummer hebt, vragen we je om <a href=""%s"">hier</a> je facturatieadres in te vullen."
-"If you are a registered VAT customer, please click <a href=""%s"">here</a> to enter you shipping address for proper VAT calculation","Wanneer je een ondernemersnummer hebt, vragen we je om <a href=""%s"">hier</a> je verzendadres in te vullen."
+"If you are a registered VAT customer, please click <a href=""%s"">here</a> to enter you billing address for proper VAT calculation",""
+"If you are a registered VAT customer, please click <a href=""%s"">here</a> to enter you shipping address for proper VAT calculation",""
 "If you have an account with us, please log in.","Log hier in als je reeds geregistreerd bent."
 "Invalid attribute option specified for attribute %s (%s), skipping the record","Ongeldige attribuut-optie opgegeven voor attribuut %s (%s), record wordt overgeslagen"
 "Invalid attribute set specified, skipping the record","Ongeldige attributenset opgegeven, record wordt overgeslagen"
@@ -228,7 +228,7 @@
 "Online Customers Options","Online-klanten Opties"
 "Online Minutes Interval","Online-minuteninterval"
 "Order #","Bestelnummer"
-"Order #%s (%s)","Bestelling #%s (%s)"
+"Order #%s (%s)","Bestelling %s (%s)"
 "Order List...","Bestellijst..."
 "Order Total","Totaal Bestellingen"
 "Orders","Bestellingen"
@@ -276,6 +276,7 @@
 "Remember Me","Onthoud mij"
 "Remove","Verwijderen"
 "Require Emails Confirmation","E-mailbevestiging verplichten"
+"Reset a Password","Maak nieuw paswoord aan"
 "Retrieve address data","Adresgegevens ophalen"
 "Retrieve address info","Adresgegevens ophalen"
 "Retrieve customer addresses","Klantadressen ophalen"
@@ -414,6 +415,7 @@
 "You have placed no products yet.","Je hebt nog geen producten toegevoegd."
 "You're now Logged Out","Je bent nu uitgelogd"
 "Your account balance is: %s","De balans van je account is: %s"
+"Your password has been updated.","Je paswoord is aangepast."
 "ZIP","Postcode"
 "ZIP/Post Code","Postcode"
 "ZIP/Postal Code","Postcode"
