--- a/KoketSite/app/locale/nl_NL/Mage_Rss.csv
+++ b/KoketSite/app/locale/nl_NL/Mage_Rss.csv
@@ -26,8 +26,8 @@
 "New Products","Nieuwe producten"
 "New Products from %s","Nieuwe producten van %s"
 "Notified Date: %s<br/>","Datum ingelicht: %s<br />"
-"Order # %s Notification(s)","Bestelling # %s melding(en)"
-"Order #%s created at %s","Bestelling #%s aangemaakt op %s"
+"Order # %s Notification(s)","bestelnummer %s melding(en)"
+"Order #%s created at %s","Bestelling %s aangemaakt op %s"
 "Pending product review(s)","Onafgehandelde product-reviews"
 "Product: ""%s"" review By: %s","Product: “%s” review door: %s"
 "Product: <a href=""%s"">%s</a> <br/>","Product: <a href=”%s”>%s</a><br />"
