--- a/KoketSite/app/locale/nl_NL/Mage_Sales.csv
+++ b/KoketSite/app/locale/nl_NL/Mage_Sales.csv
@@ -128,7 +128,7 @@
 "Document","Document"
 "Edit","Wijzigen"
 "Edit Gift Messsage","Bericht bij cadeau bewerken"
-"Edit Order #%s","Bestelling #%s wijzigen"
+"Edit Order #%s","Bestelling %s wijzigen"
 "Email","E-mail"
 "Email Copy of Credit Memo","E-mail kopie van creditnota"
 "Email Copy of Invoice","E-mail kopie van factuur"
@@ -259,8 +259,8 @@
 "Order #","Bestelnummer"
 "Order # ","Bestelnummer "
 "Order # %s","Bestelling nr. %s"
-"Order #%s","Bestelling #%s"
-"Order #%s - %s","Bestelling #%s - %s"
+"Order #%s","Bestelling %s"
+"Order #%s - %s","Bestelling %s - %s"
 "Order API","Bestel-API"
 "Order Comment","Notities bestelling"
 "Order Comment Email Sender","Afzender e-mail met bestellingsnotitie"
@@ -334,7 +334,7 @@
 "Print Invoice","Factuur printen"
 "Print Invoices","Facturen printen"
 "Print Order","Bestelling printen"
-"Print Order # %s","Printen bestelling # %s"
+"Print Order # %s","Printen bestelnummer %s"
 "Print Packingslips","Pakbonnen printen"
 "Print Refund","Terugbetaling printen"
 "Print Shipment","Verzending printen"
