--- a/KoketSite/app/locale/nl_NL/Mage_Sendfriend.csv
+++ b/KoketSite/app/locale/nl_NL/Mage_Sendfriend.csv
@@ -24,3 +24,4 @@
 "Some problems with data.","Enkele problemen met data"
 "You cannot email this product to a friend","U kunt dit product niet versturen naar een vriend"
 "You cannot send more than %d times in an hour","U kunt niet vaker dan %d keer per uur versturen"
+"The link to a friend was sent.","De email werd verzonden."
