--- a/KoketSite/app/locale/nl_NL/Mage_Wishlist.csv
+++ b/KoketSite/app/locale/nl_NL/Mage_Wishlist.csv
@@ -27,6 +27,7 @@
 "My Wishlist","Mijn verlanglijst"
 "My Wishlist (%d item)","Mijn verlanglijst (%d artikel)"
 "My Wishlist (%d items)","Mijn verlanglijst (%d artikelen)"
+"Out of stock","Niet in voorraad"
 "Please enter a valid email addresses, separated by commas. For example johndoe@domain.com, johnsmith@domain.com.","Voer geldige e-mailadressen in, gescheiden door komma’s. Bijvoorbeeld iemand@domein.com, iemandanders@domein.com."
 "Please, enter your comments...","Voeg je notities toe aub."
 "Product","Product"
