--- a/KoketSite/app/locale/nl_NL/Magestore_RewardPoints.csv
+++ b/KoketSite/app/locale/nl_NL/Magestore_RewardPoints.csv
@@ -60,7 +60,7 @@
 "Earn Points","Verdiende punten"
 "Earn points","Verdiende punten"
 "Earn points for purchasing order","Gewonnen punten door bestelling"
-"Earn points for purchasing order #%s","Gewonnen punten door bestelling #%s"
+"Earn points for purchasing order #%s","Gewonnen punten door bestelling %s"
 "Earn points from shipping fee","Gewonnen punten door gratis verzending"
 "Earn points from tax","Gewonnen punten door BTW"
 "Earned Points","Verdiende Punten"
@@ -127,7 +127,7 @@
 "New Earning Rate","New Earning Rate"
 "New Spending Rate","New Spending Rate"
 "New Transaction","New Transaction"
-"No transaction found!","No transaction found!"
+"No transaction found!","Nog geen transacties gevonden."
 "No transaction was canceled","No transaction was canceled"
 "No transaction was completed","No transaction was completed"
 "No transaction was expired","No transaction was expired"
@@ -164,7 +164,7 @@
 "Retrieve points spent on cancelled order","Retrieve points spent on cancelled order"
 "Retrieve points spent on cancelled order #%s","Retrieve points spent on cancelled order #%s"
 "Retrieve points spent on refunded order","Terugname punten besteed aan terugbetaalde bestelling"
-"Retrieve points spent on refunded order #%s","Terugname punten besteed aan terugbetaalde bestelling #%s"
+"Retrieve points spent on refunded order #%s","Terugname punten besteed aan terugbetaalde bestelling %s"
 "Return points to customer's balance when order status is","Return points to customer's balance when order status is"
 "Reward Points","Kortingspunten"
 "Reward Points Image","Reward Points Image"
@@ -197,7 +197,7 @@
 "Spend points on shipping fee","Spend points on shipping fee"
 "Spend points on tax","Spend points on tax"
 "Spend points to purchase order","Gebruikte punten bij aankoop van bestelling"
-"Spend points to purchase order #%s","Gebruikte punten bij aankoop van bestelling #%s"
+"Spend points to purchase order #%s","Gebruikte punten bij aankoop van bestelling %s"
 "Spending Configuration","Spending Configuration"
 "Spending Rate","Spending Rate"
 "Spending Rate Information","Spending Rate Information"
@@ -212,7 +212,7 @@
 "Taken back points for cancelling order","Taken back points for cancelling order"
 "Taken back points for cancelling order #%s","Taken back points for cancelling order #%s"
 "Taken back points for refunding order","Teruggenomen punten voor terugbetaling bestelling"
-"Taken back points for refunding order #%s","Teruggenomen punten voor terugbetaling bestelling #%s"
+"Taken back points for refunding order #%s","Teruggenomen punten voor terugbetaling bestelling %s"
 "Template of email sent to customer before a transaction expires","Template of email sent to customer before a transaction expires"
 "Template of email sent to customer when updating point balance","Template of email sent to customer when updating point balance"
 "The maximum number of points allowed in Customer’s balance. If empty or zero, there is no limitation.","The maximum number of points allowed in Customer’s balance. If empty or zero, there is no limitation."
