opmaak en vertalingen

--- a/KoketSite/app/locale/nl_NL/Magestore_RewardPointsBehavior.csv
+++ b/KoketSite/app/locale/nl_NL/Magestore_RewardPointsBehavior.csv
@@ -106,6 +106,6 @@
 "You will earn %s for writing a review and %s for rating this product.","You will earn %s for writing a review and %s for rating this product."
 "You will earn %s for writing a review this product.","You will earn %s for writing a review this product."
 "You will earn %s for writing a tag for this product.","You will earn %s for writing a tag for this product."
-"You will earn %s on your birthday.","You will earn %s on your birthday."
+"You will earn %s on your birthday.","Op je verjaardag krijg je van ons %s!"
 "points per customer per day","points per customer per day"
 "to earn %s for sharing!","to earn %s for sharing!"
