- voorzieningen voor proefkonijn actie: bij registratie is je account niet automatisch activated: dat gebeurt manueel in de backend - nog aanpassingen van cdv en mail templates

--- a/KoketSite/app/locale/nl_NL/IWD_Opc.csv
+++ b/KoketSite/app/locale/nl_NL/IWD_Opc.csv
@@ -341,7 +341,7 @@
 "Sign Up for Newsletter","Aanmelden voor nieuwsbrief"
 "Create an account for later use", "Maak een account voor later gebruik. (aanbevolen)"
 "Login to your Account", "Log in op je account"
-"Forgot Your Password?", "Wachtwoord vergeten?"
+"Forgot Your Password?", "Nieuw passwoord kiezen"
 "Submit","Verzenden"
 "Close","Sluiten"
 "Cancel","Annuleren"
