--- a/KoketSite/app/locale/nl_NL/Mage_Customer.csv
+++ b/KoketSite/app/locale/nl_NL/Mage_Customer.csv
@@ -129,7 +129,7 @@
 "First name can't be empty","Veld Voornaam mag niet leeg zijn"
 "Forgot Email Sender","Afzender e-mail vergeten"
 "Forgot Email Template","Template e-mail vergeten"
-"Forgot Your Password?","Wachtwoord vergeten?"
+"Forgot Your Password?","Nieuw paswoord kiezen"
 "From your My Account Dashboard you have the ability to view a snapshot of your recent account activity and update your account information. Select a link below to view or edit information.","Welkom bij Kokette Katinka. Hieronder kun je je account raadplegen en bewerken."
 "General Subscription","Ik wil op de hoogte gehouden worden van aanbiedingen en nieuwigheden."
 "Global","Systeem"
@@ -357,7 +357,7 @@
 "The title that goes before name (Mr., Mrs., etc.)","De aanhef die voor de naam staat (heer, mevrouw, etc.)"
 "There are no items in customer's wishlist at the moment","Er staan momenteel geen artikelen op de verlanglijst van de klant"
 "There are no items in customer's shopping cart at the moment","Op dit moment zitten er geen artikelen in de winkelmandje van de klant"
-"There is already an account with this email address. If you are sure that it is your email address, <a href=""%s"">click here</a> to get your password and access your account.","Er bestaat reeds een account met dit email. Als je zeker bent dat dit je email is, <a href=""%s"">klik dan hier</a> om toegang tot je account te krijgen."
+"There is already an account with this email address. If you are sure that it is your email address, <a href=""%s"">click here</a> to get your password and access your account.","Er bestaat reeds een account met dit email. Ben je reeds klant in onze winkel?  <a href=""%s"">Klik dan hier</a> en kies een nieuw passwoord om toegang tot je account te krijgen."
 "There was an error while deleting the address","Er is een fout opgetreden bij het verwijderen van het adres"
 "This Email will be sent instead of Default Welcome Email, after Account Confirmation.","Deze e-mail wordt verstuurd in plaats van het standaard-welkomstbericht, na de bevestiging van het account"
 "This account is not confirmed.","Dit account is niet bevestigd."
