--- a/KoketSite/app/locale/nl_NL/Netzarbeiter_CustomerActivation.csv
+++ b/KoketSite/app/locale/nl_NL/Netzarbeiter_CustomerActivation.csv
@@ -1,5 +1,5 @@
 "Is activated","Is geactiveerd"
-"This account is not activated.","Je account is nog niet geactiveerd. Je hoort snel van ons zodra dit in orde is."
+"This account is not activated.","De shop is momenteel in testfase. Enkel onze proefkonijnen kunnen reeds aanloggen. Je krijgt een mail van ons zodra we uit testfase zijn."
 "Deactivated","Gedeactiveerd"
 "Activated","Geactiveerd"
 "Customer Activation","Klantactivering"
