--- a/KoketSite/app/design/frontend/shopper/koket/locale/nl_NL/translate.csv
+++ b/KoketSite/app/design/frontend/shopper/koket/locale/nl_NL/translate.csv
@@ -141,3 +141,4 @@
 "Use point","Korting"
 "Cancel","Annuleer"
 "Items %s to %s of %s total","Artikelen %s tot %s van de %s"
+"The requested Payment Method is not available.","De gekozen betalingswijze is niet (meer) beschikbaar."
