--- a/KoketSite/app/locale/nl_NL/IWD_Opc.csv
+++ b/KoketSite/app/locale/nl_NL/IWD_Opc.csv
@@ -334,7 +334,7 @@
 "Your recurring payment profiles:","je herbruikbare betalingsprofielen:"
 "Zip/Postal Code","Postcode"
 
-"Enter your coupon code:","Vul je coupon code in:"
+"Enter your coupon code:","Vul je kortingscode in:"
 "Name & Address", "Naam en adres"
 "LOGIN HERE", "Log in"
 "Fill in the Fields below to complete your purchase!", "Vul de onderstaande velden in om je aankoop te voltooien."
