checkout: ajax interval: 2000 in plaats van 300 vertaling

--- a/KoketSite/app/design/frontend/shopper/koket/locale/nl_NL/translate.csv
+++ b/KoketSite/app/design/frontend/shopper/koket/locale/nl_NL/translate.csv
@@ -143,3 +143,4 @@
 "Cancel","Annuleer"
 "Items %s to %s of %s total","Artikelen %s tot %s van de %s"
 "The requested Payment Method is not available.","De gekozen betalingswijze is niet (meer) beschikbaar."
+"Some of the products are currently out of stock.","Sommige artikels zijn momenteel niet in voorraad."
